[gd_scene load_steps=20 format=2]

[ext_resource path="res://textures/sprites/Work/work_desk_on.png" type="Texture" id=1]
[ext_resource path="res://scripts/work/Timer.gd" type="Script" id=2]
[ext_resource path="res://textures/sprites/Work/work_desk_off.png" type="Texture" id=3]
[ext_resource path="res://prefabs/Dialoguer_WorkGame.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/work/drawer.gd" type="Script" id=5]
[ext_resource path="res://scripts/work/audio.gd" type="Script" id=6]
[ext_resource path="res://textures/sprites/Work/work_background.png" type="Texture" id=7]
[ext_resource path="res://scripts/work/gamer.gd" type="Script" id=8]
[ext_resource path="res://scripts/work/looper.gd" type="Script" id=9]
[ext_resource path="res://textures/sprites/cassette_idle/cassette_idle1.png" type="Texture" id=10]
[ext_resource path="res://textures/sprites/cassette_blue_idle1.png" type="Texture" id=11]
[ext_resource path="res://textures/sprites/cassette_blue_idle2.png" type="Texture" id=12]
[ext_resource path="res://textures/sprites/cassette_green_idle1.png" type="Texture" id=13]
[ext_resource path="res://textures/sprites/cassette_green_idle2.png" type="Texture" id=14]
[ext_resource path="res://textures/sprites/cassette_yellow_idle2.png" type="Texture" id=15]
[ext_resource path="res://textures/sprites/cassette_yellow_idle1.png" type="Texture" id=16]
[ext_resource path="res://textures/sprites/cassette_idle/cassette_idle2.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "def0",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 17 ) ],
"loop": true,
"name": "def1",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "def2",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "def3",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=2]
script/source = "extends AnimatedSprite

var anims = [\"def0\", \"def1\", \"def2\", \"def3\"]

func _exit_tree():
	$\"/root/Quester\".show();
func _ready():
	$\"/root/Quester\".hide();
	randomize();
	animation = anims[randi()%4];
"

[node name="Node2D" type="Node2D"]

[node name="background" type="Sprite" parent="."]
position = Vector2( 555, 314 )
scale = Vector2( 2.35741, 2.35741 )
texture = ExtResource( 7 )

[node name="workdesk" type="Sprite" parent="."]
position = Vector2( 450, 341 )
scale = Vector2( 2.02778, 2.02778 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 832, 192 )
scale = Vector2( 4.09, 4.09 )
frames = SubResource( 1 )
animation = "def0"
playing = true
script = SubResource( 2 )

[node name="looper" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="audio" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 6 )

[node name="drawer" type="Node2D" parent="."]
position = Vector2( 264, 480 )
z_index = 2
script = ExtResource( 5 )

[node name="gamer" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
script = ExtResource( 8 )

[node name="rec_button" type="Sprite" parent="gamer"]
visible = false
position = Vector2( 449.41, 340.722 )
scale = Vector2( 2.03563, 2.03563 )
texture = ExtResource( 1 )

[node name="praiser" type="ColorRect" parent="gamer"]
visible = false
margin_left = 75.3459
margin_top = 63.8919
margin_right = 1051.35
margin_bottom = 568.892
color = Color( 0.152941, 0.282353, 0.721569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="gamer/praiser"]
margin_left = 1.2973
margin_top = -0.275574
margin_right = 976.297
margin_bottom = 502.724
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition_Timer" type="Timer" parent="gamer"]
wait_time = 6.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true
script = ExtResource( 2 )

[node name="dialoger" parent="." instance=ExtResource( 4 )]
position = Vector2( 256, 320 )
[connection signal="recording_off" from="gamer" to="drawer" method="_on_gamer_recording_off"]
[connection signal="recording_off" from="gamer" to="audio" method="_on_gamer_recording_off"]
[connection signal="recording_on" from="gamer" to="drawer" method="_on_gamer_recording_on"]
[connection signal="timeout" from="gamer/Transition_Timer" to="gamer" method="_on_Transition_Timer_timeout"]
[connection signal="timeout" from="Timer" to="gamer" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="drawer" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="audio" method="_on_Timer_timeout"]
